--- a/src/AboutUs.css
+++ b/src/AboutUs.css
@@ -1,6 +1,7 @@
 .about-us-container {
     width: 1000px;
-    /* margin: 0 auto; */
+    margin-right: 1000px;
+    /* margin: 0 auto;
     /* padding: 20px; */
     /* background-color: red; */
     text-align: justify;
