--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
 
 .landing_content {
  margin-top: 430px;
-  margin-left: 100px;
+  margin-left: 200px;
   transform: translate(-50%, -50%);
   z-index: 1;
   text-align: center;
@@ -55,15 +55,16 @@
 .content p,
 .content h1 {
   color: white;
+  
 }
 
 .content h1 {
-  font-size: 48px;
-  margin-bottom: 10px;
+  font-size: 30px;
+  margin-bottom: 1px;
 }
 
 .content p {
-  font-size: 25px;
+  font-size: 20px;
 }
 
 .divider {
@@ -123,9 +124,10 @@
   }
 
   .landing_content {
+
     margin-top: 100px; /* Adjust as needed */
     margin-left: 0;
-    width: 80%; /* Adjust as needed */
+    width: %; /* Adjust as needed */
     text-align: center;
   }
 
